# effluent

./: .gitignore  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  paper.md  pytest.ini  setup.cfg
.circleci/: config.yml
.github/workflows/: develop.yml  draft-pdf.yml  pypi.yml  release.yml
docs/: paper.bib  paper.md
docs/source/: algo.rst  algorithm.rst  api.rst  conf.py  config.rst  contributing.rst  credits.rst  ex_standard.rst  examples.rst  externals.rst  index.rst  input.rst  output.rst  overview.rst  requirements.txt
docs/source/_static/css/: custom.css
docs/source/_templates/autoapi/: index.rst
docs/source/config/: ambient.rst  model.rst  output.rst  pipe.rst  solver.rst
docs/source/examples/: jet.rst  neutral.rst
docs/source/examples/buoyant/: config.toml  main.rst  out.csv
docs/source/examples/coflow/: config.toml  main.rst  out.csv
docs/source/examples/crossflow/: config.toml  main.rst  out.csv
docs/source/examples/inclined/: config.toml  main.rst  out.csv
docs/source/examples/jet/: config.toml  main.rst  out.csv
docs/source/examples/roms/: config.toml  main.rst  out.csv  out.nc
docs/source/examples/stratified/: ambient.csv  config.toml  main.rst  out.csv  pipe.csv
effluent/: __init__.py  jet.py  model.py  modeldata.py  script.py  solver.py  utils.py
src/effluent/: __init__.py  __main__.py  eos.py  io.py  model.py  modeldata.py  numerics.py  roms.py  script.py  solver.py  utils.py
tests/: README.md  test_environment.yml  test_eos.py  test_examples.py  test_io.py  test_model.py  test_modeldata.py  test_numerics.py  test_roms.py  test_solver.py  test_utils.py
tests/examples/minimal/: config.toml  config.yaml  expected.csv  expected.nc
tests/examples/neutral/: ambient.csv  config.toml  config.yaml  expected.csv  pipe.csv
tests/examples/roms/: config.toml  expected.csv  pipe.csv
tests/examples/stratified/: config.toml  expected.csv
tests/fixtures/: forcing_1.nc  forcing_2.nc  profile.csv
