[metadata]
name = effluent
version = attr: effluent.__version__
description = Pipe discharge model
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    effluent
install_requires =
    pytest
    numpy
    xarray
    h5netcdf
    holoviews
python_requires = >=3.6

[options.package_data]
* = *.yaml, *.csv
