[metadata]
name = effluent
version = attr: effluent.__version__
description = Simulate effluent discharges from wastewater pipes
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnsaevik/effluent
keywords = pipes turbulent jets plumes ocean
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://effluent.readthedocs.io/en/latest/
    Changelog = https://github.com/pnsaevik/effluent/blob/main/CHANGELOG.md

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    xarray
    netcdf4
    holoviews
    scipy
python_requires = >=3.6

[options.packages.find]
where=src

[options.package_data]
* =
    *.yaml
    *.csv
