[metadata]
name = effluent
version = attr: effluent.__version__
description = Simulate effluent discharges from wastewater pipes
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnsaevik/effluent
keywords = pipes turbulent jets plumes ocean
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://effluent.readthedocs.io/en/latest/
    Changelog = https://github.com/pnsaevik/effluent/blob/main/CHANGELOG.md

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    xarray
    pandas
    netcdf4
    scipy
    tomli
python_requires = >=3.6

[options.extras_require]
dev =
    pytest
    matplotlib
    sphinx
    sphinx-autoapi

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    effluent = effluent.script:main

[options.package_data]
* =
    *.toml
    *.csv
    *.nc
